# AnotherFasterRunner

./: .coverage  .coveragerc  .dockerignore  .env  .env.example  .env.external.samlpe  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  CLAUDE.md  Dockerfile  LICENSE  Makefile  Makefile.test  README-TESTING.md  README.md  SECURITY_FIXES.md  ci_settings.py  conftest.py  db.sqlite3  docker-compose-build-db-mq.yml  docker-compose-build-web.yml  docker-compose-for-fastup.yml  docker-compose-without-db-mq.yml  docker-compose.md  docker-compose.yml  docker-compose.yml.bak  docker-compose部署.md  docker_mysql.cnf  manage.py  mydb.cnf  nginx.conf  pyproject.toml  pytest-ci.ini  pytest-temp.ini  pytest.ini  require.txt  requirements.txt  setup.py  (+7 more)
.devcontainer/: Dockerfile  README.md  claude-setup.sh  devcontainer.json  setup.sh
ComposeDeploy/: .env.example  Dockerfile  Dockerfile.history1028  docker-compose-build-db-mq.yml  docker-compose-for-fastup.yml  docker-compose-without-db-mq.yml  docker-compose.yml.bak  requirements.txt  uwsgi_docker.ini
FasterRunner/: __about__.py  __init__.py  auth.py  celery.py  cli.py  customer_swagger.py  database.py  log.py  mycelery.py  mycelery_dev.py  pagination.py  routers.py  settings.py  swagger.py  urls.py  uwsgi.ini  uwsgi_docker.ini  wsgi.py  wsgi_docker.py
FasterWeb/: .eslintrc.cjs  .npmrc  .prettierrc.js  Dockerfile  README.md  index.html  package.json  vite-docker.config.js  vite.config.js
curd/: __init__.py  base_curd.py  crud_helper.py
db/: init.sql  my.cnf
extends/: models.py  posetman.py  urls.py  views.py
fastrunner/: apps.py  models.py  serializers.py  tasks.py  test.py  tests.py  urls.py  views.py
fasttask/: apps.py  models.py
fastuser/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
httprunner/: __about__.py  __init__.py  api.py  cli.py  client.py  compat.py  context.py  exceptions.py  loader.py  locustfile.py  locusts.py  logger.py  parser.py  report.py  response.py  runner.py  runtime.py  utils.py  validator.py
mock/: apps.py  models.py  serializers.py  tasks.py  views.py
nginx/: Dockerfile  nginx.conf
sql/: django_celery_beat_init.sql
static/: extent.js
system/: apps.py  models.py  tasks.py  views.py
templates/: report_template.html
tests/: test_additional_coverage.py  test_api_views.py  test_basic_imports.py  (+33 more)
(+410 files in other folders)
